--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "require": {
         "php": ">=7.1",
-        "laravel/framework": "^7"
+        "laravel/framework": "^7",
+        "league/flysystem-aws-s3-v2": "^1.0"
     },
     "autoload": {
         "psr-4": {
